Removed placeholder values used during original exploration.

--- a/src/main/resources/timeinstatus.properties
+++ b/src/main/resources/timeinstatus.properties
@@ -1,6 +1,6 @@
 #put any key/value pairs here
-my.plugin.name=MyPlugin
 time-in-status.name=TimeInStatus
 time-in-status.description=The TimeInStatus Plugin
-gh.issue.panel.reference=Work
-gh.issue.panel.reference.tooltip=Reference Issue Tab Panel Tooltip
+gh.issue.panel.reference=Time In Status
+gh.issue.p
+9anel.reference.tooltip=Displays the amount of time this issue has sent in each workflow status
